# LearnOpenGL

./: .gitignore  CMakeLists.txt  README.md  TODO.md
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/glfw/include/: glfw3.h
dependencies/spdlog/include/spdlog/: async.h  async_logger-inl.h  common.h  logger-inl.h  logger.h  pattern_formatter-inl.h  pattern_formatter.h  spdlog.h  stopwatch.h
include/OpenGL/: Point3D.h  fileManager.h
include/OpenGL/3dObjects/: Point3D.h
include/OpenGL/glObjects/: Image.h  Shader.h  Texture.h  TextureMapping.h  Vertex.h  VertexArray.h
include/OpenGL/managers/: FileManager.h  FileManagerOld.h  ShaderManager.h  TextureManager.h
include/OpenGL/mathObjects/: Color.h  Point2D.h  Point3D.h  PointND.h
include/OpenGL/utilities/: PoolAbstract.h  SingletonAbstract.hpp  mathFunctions.hpp  utilities.h
src/: Point3D.cpp  fileManager.cpp  main.cpp
src/3dObjects/: Point3D.cpp
src/glObjects/: Image.cpp  Shader.cpp  Texture.cpp  TextureMapping.cpp  Vertex.cpp  VertexArray.cpp
src/main/: main.cpp
src/managers/: FileManager.cpp  FileManagerOld.cpp  ShaderManager.cpp  TextureManager.cpp
src/mathObjects/: Color.cpp  Point2D.cpp  Point3D.cpp  PointND.cpp
src/shaders/frag/: default.frag  lightSlateBlue.frag
src/shaders/geom/: default.geom
src/shaders/vert/: default.vert
src/test/: main.cpp
src/utilities/: PoolAbstract.cpp  mathFunctions.cpp  utilities.cpp
